Add possibility to reset stats
